# pramana

./: .claude-task  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  about.hbs  about.toml  biome.json  install.ps1  install.sh  package.json  run-issues.sh
.claude-plugin/: marketplace.json
.githooks/: commit-msg  pre-commit
.github/workflows/: auto-release.yml  auto-tag.yml  ci-embedder-integration.yml  ci-rust.yml  ci.yml  release-rust.yml  smoke.yml
bench/: embedder.ts  ground-truth.ts  metrics.ts  results-multimodel.json  results.json  search-benchmark.ts
bench/corpora/: corpus-a.ts  corpus-c.ts  pramana-software.ts  prolog-semantics.ts  user-management.ts
bench/fixtures/corpus-a/: knowledge-artifact.md  multi-tenant.md  storage.md
bench/fixtures/corpus-b/: check-active-sessions.md  check-last-admin.md  delete-user.md  get-user.md  list-users.md  permissions.md
bench/fixtures/corpus-c/: knowledge-base.md  resolution.md  token-types.md  trail.md
bench/lib/: fts5-preprocessor.ts  metrics.ts  rrf.ts
bench/results/: report-v2.md  results-v2.json
crates/pramana-cli/: Cargo.toml
crates/pramana-cli/src/: config.rs  daemon.rs  doctor.rs  error.rs  init.rs  lint.rs  main.rs  serve.rs  server.rs  upgrade.rs
crates/pramana-cli/tests/: cli_e2e.rs  mcp_e2e.rs
crates/pramana-core/: Cargo.toml
crates/pramana-embedder/: Cargo.toml
crates/pramana-embedder/src/: download.rs  lib.rs  model.rs
crates/pramana-embedder/tests/: integration_test.rs
crates/pramana-engine/: Cargo.toml
crates/pramana-engine/src/: builder.rs  convert.rs  error.rs  lib.rs  reader.rs  tenant.rs
crates/pramana-engine/tests/: engine_test.rs
crates/pramana-mcp/: Cargo.toml
crates/pramana-mcp/src/: lib.rs  server.rs
crates/pramana-mcp/tests/: e2e_stdio.rs  mcp_test.rs
crates/pramana-parser/: Cargo.toml
crates/pramana-parser/src/: document.rs  error.rs  frontmatter.rs  lib.rs  sections.rs  types.rs  wikilinks.rs
crates/pramana-parser/tests/: fixtures.rs
crates/pramana-storage/: Cargo.toml
crates/pramana-storage/src/: error.rs  fts.rs  lib.rs  model.rs  rrf.rs  schema.rs  store.rs
crates/pramana-storage/tests/: integration.rs
crates/pramana-tui/: Cargo.toml
crates/pramana-tui/src/: app.rs  data_source.rs  error.rs  io_worker.rs  layout.rs  lib.rs  theme.rs
crates/pramana-tui/src/views/: artifact_detail.rs  dashboard.rs  graph.rs  kb_list.rs  mod.rs  search.rs
crates/pramana-tui/src/widgets/: breadcrumb.rs  help_overlay.rs  mod.rs  scrollable_list.rs  status_bar.rs  text_input.rs
crates/pramana-tui/tests/: async_io_test.rs  keybinding_contract_test.rs  scrollable_list_test.rs
docs/: rust-port.md  technical.md
examples/: README.md
examples/architecture/: api-gateway.md  auth-service.md  rate-limiter.md  user-service.md
examples/law/: breach.md  causation.md  duty-of-care.md  negligence.md
examples/recipes/: bechamel.md  lasagna.md  mac-and-cheese.md  roux.md
knowledge/: api.md  build-report.md  builder.md  claude-plugin.md  cli.md  data-source.md  engine.md  frontmatter-parser.md  knowledge-artifact.md  parser.md  pramana.md  programming-model.md  query-patterns.md  reader.md  relationship-vocabulary.md  relationship.md  result-type.md  schema.md  section-parser.md  section.md  sqlite-storage.md  storage-interface.md  storage.md  tag-taxonomy.md  wikilink-parser.md  zod.md
plugin/: README.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/skills/author/: SKILL.md
plugin/skills/create-author/: SKILL.md
plugin/skills/query/: SKILL.md
plugin/skills/setup/: SKILL.md
plugin/skills/upgrade/: SKILL.md
plugin/skills/write/: SKILL.md
scripts/: build.sh  release.sh  size-audit.sh
spikes/104/: bun-baseline.ts  compare.ts  extract-queries.ts  findings.md  plan.md
spikes/104/results/: bun-corpus-a.json  bun-corpus-b.json  bun-corpus-c.json  rust-corpus-a.json  rust-corpus-b.json  rust-corpus-c.json
spikes/104/rust-core/: .gitignore  Cargo.toml
spikes/104/rust-core/src/: q1_vec.rs  q2_embed.rs  q3_search.rs  q4_parity.rs
spikes/91/: bench.ts  corpus.ts  entry.ts  findings.md  package.json  plan.md  q1-load.ts  q4-hybrid.ts  q5-accuracy.ts
src/: version.ts
src/api/: server.ts
src/cli/: doctor.ts  index.ts  lint.ts
src/config/: index.ts
src/daemon/: lifecycle.ts
src/engine/: builder.ts  reader.ts  tenant.ts
src/graph/: index.ts
src/lib/: hash.ts  tenant-names.ts
src/mcp/: server.ts
src/parser/: document.ts  frontmatter.ts  sections.ts  wikilinks.ts
src/schema/: index.ts
src/storage/: embedder.ts  embedding-index.ts  fts5-preprocessor.ts  interface.ts
src/storage/sqlite/: index.ts
src/tui/: app.tsx  data-source.ts  index.tsx  layout.ts  platform.ts  theme.ts
src/tui/components/: breadcrumb.tsx  help-overlay.tsx  scrollable-list.tsx  status-bar.tsx  text-input.tsx
src/tui/views/: artifact-detail.tsx  artifact-list.tsx  dashboard.tsx  graph.tsx  kb-context.tsx  kb-list.tsx  search.tsx  tenants.tsx
test/e2e/: api.test.ts  cli-client.test.ts  full-pipeline.test.ts  mcp.test.ts
test/fixtures/: customer.md  line-item.md  order.md  shipping-info.md
test/fixtures-alt/: category.md  note.md
test/precommit/: plugin-workflow.test.ts
test/smoke/: binary.test.ts  lib.sh  run.sh
test/smoke/tests/: 01-cli-binary.sh  02-config-integrity.sh  03-daemon-reachable.sh  04-live-tenant-present.sh  05-cli-list.sh  06-cli-get.sh  07-cli-search.sh  08-cli-traverse.sh  09-dead-tenant-recovery.sh  10-mcp-stdio-handshake.sh  11-mcp-tools-list.sh  12-doctor.sh
test/unit/cli/: client.test.ts  doctor.test.ts  lint.test.ts  port-validation.test.ts  release.test.ts  version.test.ts
test/unit/config/: config.test.ts
test/unit/daemon/: lifecycle.test.ts
test/unit/engine/: builder.test.ts  reader.test.ts  tenant.test.ts
test/unit/graph/: benchmark.test.ts  graph-index.test.ts  reader-graph.test.ts
test/unit/mcp/: server.test.ts
test/unit/parser/: document.test.ts  frontmatter.test.ts  sections.test.ts  wikilinks.test.ts
test/unit/storage/: embedder.test.ts  embedding-index.test.ts  (+3 more)
(+35 files in other folders)
