[workspace]
resolver = "2"
members = [
    "crates/pramana-core",
    "crates/pramana-cli",
    "crates/pramana-parser",
    "crates/pramana-embedder",
    "crates/pramana-storage",
    "crates/pramana-engine",
    "crates/pramana-mcp",
    "crates/pramana-tui",
]

[workspace.package]
license = "MIT"

[profile.release]
strip = true
lto = "thin"
