[package]
name = "pramana-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pramana"
path = "src/main.rs"

[dependencies]
pramana-engine = { path = "../pramana-engine" }
pramana-mcp = { path = "../pramana-mcp" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
ureq = { version = "2", features = ["json"] }
dirs = "6"
semver = "1"
sha2 = "0.10"
thiserror = "2"
tiny_http = "0.12"
