[package]
name = "pramana-cli"
version = "0.14.0"
edition = "2021"

[features]
default = ["mcp", "tui"]
mcp = ["dep:pramana-mcp", "dep:tokio"]
tui = ["dep:pramana-tui"]
embeddings = ["pramana-engine/embeddings"]

[[bin]]
name = "pramana"
path = "src/main.rs"

[dependencies]
pramana-engine = { path = "../pramana-engine" }
pramana-mcp = { path = "../pramana-mcp", optional = true }
pramana-tui = { path = "../pramana-tui", optional = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"], optional = true }
ureq = { version = "2", features = ["json"] }
dirs = "6"
semver = "1"
sha2 = "0.10"
thiserror = "2"
tiny_http = "0.12"
