[package]
name = "pramana-embedder"
version = "0.14.2"
edition = "2021"
license.workspace = true

[dependencies]
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.16"
thiserror = "2"
ureq = "2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
