[package]
name = "pramana-engine"
version = "0.14.0-rc.1"
edition = "2021"

[features]
default = []
embeddings = ["dep:pramana-embedder"]

[dependencies]
pramana-parser = { path = "../pramana-parser" }
pramana-storage = { path = "../pramana-storage" }
pramana-embedder = { path = "../pramana-embedder", optional = true }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
