[package]
name = "pramana-engine"
version = "0.14.2"
edition = "2021"
license.workspace = true

[features]
default = []
embeddings = ["dep:pramana-embedder"]

[dependencies]
pramana-parser = { path = "../pramana-parser" }
pramana-storage = { path = "../pramana-storage" }
pramana-embedder = { path = "../pramana-embedder", optional = true }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
