[package]
name = "pramana-mcp"
version = "0.14.0-rc.2"
edition = "2021"

[dependencies]
pramana-engine = { path = "../pramana-engine" }
rmcp = { version = "1", default-features = false, features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "pramana-mcp-test-server"
path = "src/bin/test_server.rs"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process"] }
