[package]
name = "pramana-tui"
version = "0.14.0-rc.3"
edition = "2021"

[dependencies]
pramana-engine = { path = "../pramana-engine" }
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
unicode-segmentation = "1"
unicode-width = "0.2"
serde_json = "1"

[dev-dependencies]
insta = "1"
